[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citeradar"
version = "1.0.0"
description = "Automated citation intelligence for Google Scholar profiles — author profiles, rankings, and interactive world map."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["citation", "google-scholar", "bibliometrics", "research", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "requests[socks]>=2.31",
    "beautifulsoup4>=4.12",
    "folium>=0.15",
    "geopy>=2.4",
    "lxml>=4.9",
    "PyYAML>=6.0",
]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/citeradar"
Issues     = "https://github.com/YOUR_USERNAME/citeradar/issues"

[project.scripts]
citeradar = "citeradar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["citeradar*"]
