[metadata]
name = citeradar
version = 1.0.0
description = Automated citation intelligence for Google Scholar profiles
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = CiteRadar Contributors
python_requires = >=3.9
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests[socks]>=2.31
    beautifulsoup4>=4.12
    folium>=0.15
    geopy>=2.4
    lxml>=4.9
    PyYAML>=6.0

[options.entry_points]
console_scripts =
    citeradar = citeradar.cli:main
